--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -39,7 +39,7 @@ h5 {
   }
 
   h5 {
-    font-size: 18px;
+    font-size: 22px;
     text-align: center;
   }
 }
